quark/test/quark/AST/Errors/typeNotDeclared-001.qk
// RUN: not quark --emit-ast "%s" 2>&1 | FileCheck "%s"

fn foo: -> void {
  var dummyTypePtr : NotExistingType;
}

// CHECK:Error: type 'NotExistingType' not found!
